--- a/Sales/Sales/Resources/Resource.es.resx
+++ b/Sales/Sales/Resources/Resource.es.resx
@@ -148,15 +148,18 @@
     <value>Ingrese precio del producto</value>
   </data>
   <data name="Remarks" xml:space="preserve">
-    <value>
-Notas:
-
-</value>
+    <value>Notas:</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Guardar</value>
   </data>
   <data name="ChangeImage" xml:space="preserve">
     <value>Toca la imagen para cambiar!</value>
+  </data>
+  <data name="DescriptionError" xml:space="preserve">
+    <value>Debe escribir una descripción</value>
+  </data>
+  <data name="PriceError" xml:space="preserve">
+    <value>¡Debe ingresar un precio mayor que cero!</value>
   </data>
 </root>
