--- a/Sales/Sales/Resources/Resource.it.resx
+++ b/Sales/Sales/Resources/Resource.it.resx
@@ -194,4 +194,10 @@
   <data name="Confirm" xml:space="preserve">
     <value>Conferma</value>
   </data>
+  <data name="IsAvailable" xml:space="preserve">
+    <value>Disponibile?</value>
+  </data>
+  <data name="EditProduct" xml:space="preserve">
+    <value>Modifica prodotto</value>
+  </data>
 </root>
