--- a/Sales/Sales/Resources/Resource.es.resx
+++ b/Sales/Sales/Resources/Resource.es.resx
@@ -303,4 +303,7 @@
   <data name="RegisterConfirmation" xml:space="preserve">
     <value>El usuario se ha creado correctamente. Ahora puede ingresar con el correo electrónico y la contraseña asignada.</value>
   </data>
+  <data name="ErrorRegisterUser" xml:space="preserve">
+    <value>Ya existe este usuario</value>
+  </data>
 </root>
