--- a/Sales/Sales/Resources/Resource.resx
+++ b/Sales/Sales/Resources/Resource.resx
@@ -303,4 +303,7 @@
   <data name="RegisterConfirmation" xml:space="preserve">
     <value>The user was created successfully. Now you can enter with the email and the assigned password.</value>
   </data>
+  <data name="ErrorRegisterUser" xml:space="preserve">
+    <value>User already exists!!</value>
+  </data>
 </root>
